--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,7 @@ keywords =
 [options]
 packages = find:
 python_requires = >= 3.8
+include_package_data = True
 zip_safe = false
 install_requires =
     attrs
@@ -46,6 +47,11 @@ install_requires =
     numpy
     requests
     tqdm
+
+[options.package_data]
+* =
+  *.json
+  *.tsv
 
 tests_require =
     pytest
