build: properly use git version with setuptools_scm
Release-As: 0.1.1

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,6 +39,8 @@ packages = find:
 python_requires = >= 3.8
 include_package_data = True
 zip_safe = false
+setup_requires =
+    setuptools_scm
 install_requires =
     attrs
     cattrs
