--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ home_page = https://github.com/bihealth/gene-ranking-shootout
 name = gene-ranking-shootout
 
 long_description_content_type = text/markdown; charset=UTF-8
-long_description = file:README.rmd
+long_description = file:README.md
 license_files = LICENSE
 platform = any
 classifiers =
